small fix for image out of bounds

--- a/static/style.css
+++ b/static/style.css
@@ -97,6 +97,9 @@ h1 {
 	text-align: left;
 	height: 156px;
 }
+.animg img {
+	max-width: 100%;
+}
 .paperdesc {
 	float: left;
 	width: 750px;
